// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketContainer MarketContainer Component should match the snapshot with path on favorites containing a favorite 1`] = `
<main
  className="market-container-main"
>
  <section
    className="market-list-section"
  >
    <Connect(Market)
      image="redChili.png"
      key="22008839"
      market={
        Object {
          "Address": "901 N Taylor St, Ballston, Virginia, 22203",
          "GoogleLink": "http://maps.google.com/?q=38.881112%2C%20-77.112179%20(%22Ballston+FRESHFARM+Market%22)",
          "Products": "Baked goods; Cheese and/or dairy products; Eggs; Fresh fruit and vegetables; Fresh and/or dried herbs; Honey; Meat; Poultry",
          "Schedule": "June - October Thursday 3:00 PM to 7:00 PM",
          "favorite": true,
          "id": "22008839",
          "latitude": "38.881112",
          "longitude": "-77.112179",
          "marketname": "Ballston Farmers Market",
        }
      }
    />
  </section>
  <section
    className="markets-map-section"
  >
    <p>
      MAPPPPP
    </p>
  </section>
</main>
`;

exports[`MarketContainer MarketContainer Component should match the snapshot with path on favorites containing no favorites 1`] = `
<main
  className="market-container-main"
>
  <section
    className="market-list-section"
  >
    <h1
      className="favorites-message"
    >
      You have no favorites selected!
    </h1>
  </section>
  <section
    className="markets-map-section"
  >
    <p>
      MAPPPPP
    </p>
  </section>
</main>
`;

exports[`MarketContainer MarketContainer Component should match the snapshot with path on markets 1`] = `
<main
  className="market-container-main"
>
  <section
    className="market-list-section"
  >
    <Connect(Market)
      image="chilli.png"
      key="1002192"
      market={
        Object {
          "Address": "901 N Taylor St, Ballston, Virginia, 22203",
          "GoogleLink": "http://maps.google.com/?q=38.881112%2C%20-77.112179%20(%22Ballston+FRESHFARM+Market%22)",
          "Products": "Baked goods; Cheese and/or dairy products; Eggs; Fresh fruit and vegetables; Fresh and/or dried herbs; Honey; Meat; Poultry",
          "Schedule": "June - October Thursday 3:00 PM to 7:00 PM",
          "favorite": false,
          "id": "1002192",
          "latitude": "38.881112",
          "longitude": "-77.112179",
          "marketname": "Ballston FRESHFARM Market",
        }
      }
    />
    <Connect(Market)
      image="chilli.png"
      key="22008839"
      market={
        Object {
          "Address": "901 N Taylor St, Ballston, Virginia, 22203",
          "GoogleLink": "http://maps.google.com/?q=38.881112%2C%20-77.112179%20(%22Ballston+FRESHFARM+Market%22)",
          "Products": "Baked goods; Cheese and/or dairy products; Eggs; Fresh fruit and vegetables; Fresh and/or dried herbs; Honey; Meat; Poultry",
          "Schedule": "June - October Thursday 3:00 PM to 7:00 PM",
          "favorite": false,
          "id": "22008839",
          "latitude": "38.881112",
          "longitude": "-77.112179",
          "marketname": "Ballston Farmers Market",
        }
      }
    />
  </section>
  <section
    className="markets-map-section"
  >
    <p>
      MAPPPPP
    </p>
  </section>
</main>
`;

exports[`MarketContainer MarketContainer Component should match the snapshot with path on markets and when there is no zip code 1`] = `
<main
  className="market-container-main"
>
  <Connect(ZipCodeForm)
    path="/markets"
  />
  <section
    className="market-list-section"
  >
    <Connect(Market)
      image="chilli.png"
      key="1002192"
      market={
        Object {
          "Address": "901 N Taylor St, Ballston, Virginia, 22203",
          "GoogleLink": "http://maps.google.com/?q=38.881112%2C%20-77.112179%20(%22Ballston+FRESHFARM+Market%22)",
          "Products": "Baked goods; Cheese and/or dairy products; Eggs; Fresh fruit and vegetables; Fresh and/or dried herbs; Honey; Meat; Poultry",
          "Schedule": "June - October Thursday 3:00 PM to 7:00 PM",
          "favorite": false,
          "id": "1002192",
          "latitude": "38.881112",
          "longitude": "-77.112179",
          "marketname": "Ballston FRESHFARM Market",
        }
      }
    />
    <Connect(Market)
      image="chilli.png"
      key="22008839"
      market={
        Object {
          "Address": "901 N Taylor St, Ballston, Virginia, 22203",
          "GoogleLink": "http://maps.google.com/?q=38.881112%2C%20-77.112179%20(%22Ballston+FRESHFARM+Market%22)",
          "Products": "Baked goods; Cheese and/or dairy products; Eggs; Fresh fruit and vegetables; Fresh and/or dried herbs; Honey; Meat; Poultry",
          "Schedule": "June - October Thursday 3:00 PM to 7:00 PM",
          "favorite": false,
          "id": "22008839",
          "latitude": "38.881112",
          "longitude": "-77.112179",
          "marketname": "Ballston Farmers Market",
        }
      }
    />
  </section>
  <section
    className="markets-map-section"
  >
    <p>
      MAPPPPP
    </p>
  </section>
</main>
`;
